# pbrt-v4

./: .#todo.txt  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  todo.txt
notes/: sample disney rd.nb  sample spotlight.nb  srgb fit.nb
src/accelerators/: bvh.cpp  bvh.h  kdtreeaccel.cpp
src/cameras/: environment.cpp  environment.h  orthographic.cpp  orthographic.h  perspective.cpp  perspective.h  realistic.cpp  realistic.h
src/core/: api.cpp  api.h  args.h  bounds.h  bssrdf.cpp  bssrdf.h  camera.cpp  camera.h  efloat.h  error.cpp  fileutil.cpp  fileutil.h  film.cpp  film.h  filter.h  floatfile.cpp  floatfile.h  fp16.h  geometry.cpp  geometry.h  image.cpp  image.h  imageio.cpp  integrator.cpp  integrator.h  interaction.cpp  interaction.h  interpolation.cpp  interpolation.h  light.cpp  light.h  lightdistrib.cpp  lightdistrib.h  lowdiscrepancy.cpp  lowdiscrepancy.h  material.cpp  material.h  mathutil.cpp  mathutil.h  medium.cpp  (+48 more)
src/ext/: CMakeLists.txt
src/ext/google/: array_slice.h  array_slice_internal.h
src/filters/: box.cpp  box.h  gaussian.cpp  gaussian.h  mitchell.cpp  mitchell.h  sinc.cpp  sinc.h  triangle.cpp  triangle.h
src/integrators/: ao.cpp  ao.h  aov.cpp  aov.h  bdpt.cpp  bdpt.h  directlighting.cpp  directlighting.h  mlt.cpp  mlt.h  path.cpp  path.h  sppm.cpp  sppm.h  volpath.cpp  volpath.h  whitted.cpp  whitted.h
src/lights/: diffuse.cpp  diffuse.h  distant.cpp  distant.h  goniometric.cpp  goniometric.h  infinite.cpp  infinite.h  point.cpp  point.h  projection.cpp  projection.h  spot.cpp  spot.h
src/main/: pbrt.cpp
src/materials/: disney.cpp  disney.h  fourier.cpp  fourier.h  glass.cpp  glass.h  hair.cpp  hair.h  kdsubsurface.cpp  kdsubsurface.h  matte.cpp  matte.h  metal.cpp  metal.h  mirror.cpp  mirror.h  mixmat.cpp  mixmat.h  plastic.cpp  plastic.h  substrate.cpp  substrate.h  subsurface.cpp  subsurface.h  translucent.cpp  translucent.h  uber.cpp  uber.h
src/media/: grid.cpp  grid.h  homogeneous.cpp  homogeneous.h
src/pbrt/: accelerators.cpp  accelerators.h  base.h  bsdf.cpp  bsdf.h  bsdfs_test.cpp  bssrdf.cpp  bssrdf.h  bxdfs.cpp  bxdfs.h  cameras.cpp  cameras.h  cpurender.cpp  cpurender.h  film.cpp  film.h  filters.cpp  filters.h  filters_test.cpp  genscene.cpp  genscene.h  gpu.cpp  gpu.h  integrators.cpp  integrators.h  interaction.cpp  interaction.h  lights.cpp  lights.h  lights_test.cpp  lightsamplers.cpp  lightsamplers.h  lightsamplers_test.cpp  lightsampling.cpp  lightsampling.h  loopsubdiv.cpp  loopsubdiv.h  materials.cpp  materials.h  media.cpp  (+33 more)
src/pbrt/accelerators/: bvh.cpp  bvh.h  kdtreeaccel.cpp  kdtreeaccel.h
src/pbrt/base/: bssrdf.h  bxdf.h  camera.h  film.h  filter.h  light.h  lightsampler.h  material.h  medium.h  sampler.h  shape.h  spectrum.h  texture.h
src/pbrt/cameras/: environment.cpp  environment.h  orthographic.cpp  orthographic.h  perspective.cpp  perspective.h  realistic.cpp  realistic.h
src/pbrt/cmd/: bsdftest.cpp  cyhair2pbrt.cpp  imgtool.cpp  obj2pbrt.cpp  pbrt.cpp  pbrt_test.cpp  rgb2spec_opt.cpp
src/pbrt/core/: api.cpp  api.h  bssrdf.cpp  bssrdf.h  camera.cpp  camera.h  error.cpp  error.h  film.cpp  film.h  filter.cpp  filter.h  image.cpp  image.h  integrator.cpp  integrator.h  interaction.cpp  interaction.h  light.cpp  light.h  lightdistrib.cpp  lightdistrib.h  lowdiscrepancy.cpp  lowdiscrepancy.h  material.cpp  material.h  medium.cpp  medium.h  microfacet.cpp  microfacet.h  mipmap.cpp  mipmap.h  options.cpp  options.h  paramset.cpp  paramset.h  parser.cpp  parser.h  pbrt.h  pbrtlex.cpp  (+23 more)
src/pbrt/cpu/: #integrators.cpp#  .#integrators.cpp  accelerators.cpp  accelerators.h  integrators.cpp  integrators.h  integrators_test.cpp  primitive.cpp  primitive.h  render.cpp  render.h
src/pbrt/filters/: box.cpp  box.h  gaussian.cpp  gaussian.h  mitchell.cpp  mitchell.h  sinc.cpp  sinc.h  triangle.cpp  triangle.h
src/pbrt/gpu/: accel.cpp  accel.h  camera.cpp  direct.cpp  direct.h  film.cpp  indirect.cpp  indirect.h  init.cpp  init.h  launch.cpp  launch.h  material.h  media.cpp  optix.cu  optix.h  pathintegrator.cpp  pathintegrator.h  subsurface.cpp  workqueue.h
src/pbrt/integrators/: ao.cpp  ao.h  aov.cpp  aov.h  bdpt.cpp  bdpt.h  mlt.cpp  mlt.h  path.cpp  path.h  sppm.cpp  sppm.h  volpath.cpp  volpath.h  whitted.cpp  whitted.h
src/pbrt/lights/: diffuse.cpp  diffuse.h  distant.cpp  distant.h  goniometric.cpp  goniometric.h  infinite.cpp  infinite.h  point.cpp  point.h  projection.cpp  (+3 more)
src/samplers/: halton.cpp  halton.h  maxmin.cpp  maxmin.h  random.cpp  random.h  sobol.cpp  sobol.h  stratified.cpp  stratified.h  zerotwosequence.cpp  zerotwosequence.h
src/shapes/: cone.cpp  cone.h  curve.cpp  curve.h  cylinder.cpp  cylinder.h  disk.cpp  disk.h  heightfield.cpp  heightfield.h  hyperboloid.cpp  hyperboloid.h  loopsubdiv.cpp  loopsubdiv.h  nurbs.cpp  nurbs.h  paraboloid.cpp  paraboloid.h  plymesh.cpp  plymesh.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/tests/: analytic_scenes.cpp  animatedtransform.cpp  args.cpp  array_slice_test.cpp  bitops.cpp  bounds.cpp  bsdfs.cpp  fileutil.cpp  filters.cpp  find_interval.cpp  fp_tests.cpp  geometry.cpp  hair.cpp  half.cpp  hg.cpp  image.cpp  imageio.cpp  lights.cpp  mathutil.cpp  memory.cpp  parallel.cpp  print.cpp  rng.cpp  sampling.cpp  shapes.cpp  spectrum.cpp  texcache.cpp
src/textures/: bilerp.cpp  bilerp.h  checkerboard.cpp  checkerboard.h  constant.cpp  constant.h  dots.cpp  dots.h  fbm.cpp  fbm.h  imagemap.cpp  imagemap.h  marble.cpp  marble.h  mix.cpp  mix.h  ptex.cpp  ptex.h  scale.cpp  scale.h  uv.cpp  uv.h  windy.cpp  windy.h  wrinkled.cpp  wrinkled.h
src/tools/: bsdftest.cpp  imgtool.cpp  obj2pbrt.cpp
src/util/: args.h  bits.h  bounds.h  efloat.cpp  efloat.h  fileutil.cpp  fileutil.h  floatfile.cpp  floatfile.h  fp16.h  geometry.cpp  geometry.h  half.h  interpolation.cpp  interpolation.h  mathutil.cpp  mathutil.h  memory.cpp  memory.h  parallel.cpp  parallel.h  progressreporter.cpp  progressreporter.h  quaternion.cpp  quaternion.h  rng.cpp  rng.h  stats.cpp  stats.h  stringprint.h  transform.cpp  transform.h  tuple.h
(+256 files in other folders)
